template/2_database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  ports:
    - port: 1433
      name: database
  selector:
    app: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: secrets
              mountPath: /var/opt/mssql/secrets
          volumeDevices:
            - name: data
              devicePath: /var/opt/mssql/data
            - name: log
              devicePath: /var/opt/mssql/log
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
       # storageClassName: default # replace
        volumeMode: Block # replace
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi # replace
    - metadata:
        name: log
      spec:
       # storageClassName: default # replace
        volumeMode: Block
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: secrets
      spec:
        storageClassName: azurefile # replace
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
