template/3_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: app
      nodeSelector:
        kubernetes.io/os: windows
      containers:
        - name: app
          image: imgurl # replace
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vol
              mountPath: /mount/path # replace
          # if it's necessary to pass database connection variables this way
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app: app
spec:
  ingressClassName: nginx # replace with ingress class
  rules:
    - host: http.app.host.com # replace
      http:
        paths:
          - path: /
            backend:
              service:
                name: app
                port:
                  number: 80
